# Tantra

./: .gitignore  LICENSE  README.md  ROADMAP.md  TEST_RESULTS.md  VENDORING.md  pyproject.toml  test_installation.py  vendor.py
.github/: copilot-instructions.md
examples/: assistant_agent.py  basic_usage.py  custom_tool_agent.py  multi_agent.py
examples/patterns/: README.md
tantra/: __init__.py  agent.py  config.py  context.py  llm.py  memory.py  openai.py  providers.py  session.py  tools.py  types.py  utils.py
tantra/models/: __init__.py  parameter_store.py
tantra/providers/: __init__.py  openai.py
tantra/utils/: logger.py
